# Galotfa

./: CMakeLists.txt  Doxyfile  README.md
examples/: galotfa.toml
include/: barinfo.hpp  coordinate.hpp  eigen.hpp  galotfa.h  galotfa.hpp  h5out.hpp  mainpage.hpp  monitor.hpp  myprompt.hpp  para.hpp  recenter.hpp  selector.hpp  statistic.hpp
src/: barinfo.cpp  coordinates.cpp  eigen.cpp  galotfa.cpp  h5out.cpp  monitor.cpp  para.cpp  recenter.cpp  selector.cpp  statistic.cpp
validation/: component_test.toml  idlist.txt  orbit_log_test.toml  orbit_select_test.toml  orbit_test.toml  test_barinfo.cpp  test_bin1d.cpp  test_bin2d.cpp  test_coordTrans.cpp  test_eigen.cpp  test_h5out.cpp  test_monitor.cpp  test_orbit_random.toml  test_orbitalLog.cpp  test_orbitalSelection.cpp  test_para.cpp  test_recenter.cpp
